--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p>&#128525;</p>
         </div>
     <div class="button">
-        <a href="page1.php"><p>Next</p></a>
+        <a href="page1.html"><p>Next</p></a>
     </div>
 
     </div>
