--- a/index.html
+++ b/index.html
@@ -2,24 +2,26 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-     <meta name="viewport"content="width=device-width,initial-scale=1.0">
-     <title>Letter for BBii !! <3</title>
-     <link rel="stylesheet"href="style.css">
-     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&amp;display=swap">
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&amp;display=swap">	
+    <title>Open It!</title>
+    <link rel="stylesheet" href="style1.css">
 </head>
 <body>
-    <div class="container">
-        <div class="title">
-            <h1>Hello Bbi !!</h1>
-            <p>&#128525;</p>
-        </div>
-    <div class="button">
-        <a href="page1.html"><p>Next</p></a>
+    <div class="wrapper">
+      <div class="lid one"></div>
+      <div class="lid two"></div>
+      <div class="envelope"></div>
+      <div class="letter">
+        <p>Hello baby ko, Goodmorning gusto lang po mag sorry kase lagi
+             kitang dinidisappoint araw-araw. Gusto ko din mag thank you
+              kase nandito ka parin nag sstay kahit na sakit na ako sa ulo
+               sayo, mahal na mahal kita and masaya ako kase kanina lang nag
+                ka usap ulit kayo ng bestfriend mo, nakakataba lang ng puso kasi
+                 mga kinakatakutan mo dati unti unti mo nang nahaharap,
+                  hihi iloveyou always!! mag iingat ka lagi ♥ ♥ ♥</p>
+      </div>
     </div>
-
-    </div>
-</body>
+  </body>
 </html>
